Fixes issue with #834 (#1316)
* FeatureIDE#834: Fixed Java 8 incompability.